<resources>
    <string name="app_name">BroadcastBestPractice</string>
    <string name="input_username">请输入您的用户名</string>
    <string name="input_password">请输入您的密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="logout">退出登录</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="logo">LOGO</string>
    <string name="love">爱情和智慧</string>
    <string name="none">二者不可兼得</string>
    <string name="balance">我只是尽力在找平衡</string>
</resources>
