<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:stretchColumns="1">


        <TableRow
            android:layout_margin="8dp"
            android:background="@drawable/shape_background">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/account"
                android:src="@drawable/username_icon"/>

            <EditText
                android:id="@+id/account"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_username"
                android:singleLine="true"
                android:textColorHint="@color/hit_color"/>

        </TableRow>

        <TableRow
            android:layout_margin="8dp"
            android:background="@drawable/shape_background">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/password"
                android:src="@drawable/password_icon"/>

            <EditText
                android:id="@+id/password"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColorHint="@color/hit_color"/>

        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/remember_pass"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_height="wrap_content"
                android:text="@string/remember_password"/>


        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_span="2"
                android:background="@drawable/button_changed"
                android:text="@string/login"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/register"
                style="?android:attr/borderlessButtonStyle"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_span="2"
                android:background="@drawable/button_changed"
                android:text="@string/register"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </TableRow>


    </TableLayout>

</RelativeLayout>
